--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,1 +1,13 @@
-Middle
+<div class="row mt-5">
+    <div class="col-md-6 m-auto">
+        <h4>AUI Library Management System</h4>
+      <div class="card card-body text-center">
+        
+        <p>Create an account or login</p>
+        <a href="/users/register" class="btn btn-primary btn-block mb-2"
+          >Register</a
+        >
+        <a href="/users/login" class="btn btn-secondary btn-block">Login</a>
+      </div>
+    </div>
+  </div>
