--- a/views/managerlogin.ejs
+++ b/views/managerlogin.ejs
@@ -2,17 +2,17 @@
     <div class="col-md-6 m-auto">
         <h4>AUI Library Management System</h4>
       <div class="card card-body">
-        <h1 class="text-center mb-3"><i class="fas fa-sign-in-alt"></i>  Login</h1>
-
-        <form action="/users/login" method="POST">
+        <h1 class="text-center mb-3"><i class="fas fa-sign-in-alt"></i>Manager Login</h1>
+        <%- include('partials/messages'); %>
+        <form action="/users/manager/login" method="POST">
           <div class="form-group">
-            <label for="email">Email</label>
+            <label for="username">Email</label>
             <input
-              type="email"
-              id="email"
-              name="email"
+              type="text"
+              id="username"
+              name="username"
               class="form-control"
-              placeholder="Enter Email"
+              placeholder="Enter Username"
             />
           </div>
           <div class="form-group">
@@ -27,9 +27,7 @@
           </div>
           <button type="submit" class="btn btn-primary btn-block">Login</button>
         </form>
-        <p class="lead mt-4">
-          No Account? <a href="/users/register">Register</a>
-        </p>
+        
       </div>
     </div>
   </div>
