--- a/views/managerlogin.ejs
+++ b/views/managerlogin.ejs
@@ -4,7 +4,7 @@
       <div class="card card-body">
         <h1 class="text-center mb-3"><i class="fas fa-sign-in-alt"></i>Manager Login</h1>
         <%- include('partials/messages'); %>
-        <form action="/users/manager/login" method="POST">
+        <form action="/user/manager/login" method="POST">
           <div class="form-group">
             <label for="username">Email</label>
             <input
