--- a/views/studentdashboard.ejs
+++ b/views/studentdashboard.ejs
@@ -41,7 +41,7 @@
             </li>
           </ul>
       
-          <a href="/users/student/logout" class="btn btn-primary btn-sm ml-auto">Log out</a>
+          <a href="/user/student/logout" class="btn btn-primary btn-sm ml-auto">Log out</a>
        
       </div>
   </div>
