--- a/views/studentlogin.ejs
+++ b/views/studentlogin.ejs
@@ -4,7 +4,7 @@
       <div class="card card-body">
         <h1 class="text-center mb-3"><i class="fas fa-sign-in-alt"></i> Student Login</h1>
         <%- include('partials/messages'); %>
-        <form action="/users/student/login" method="POST">
+        <form action="/user/student/login" method="POST">
           <div class="form-group">
             <label for="email">Email</label>
             <input
@@ -28,7 +28,7 @@
           <button type="submit" class="btn btn-primary btn-block">Login</button>
         </form>
         <p class="lead mt-4">
-          No Account? <a href="/users/student/register">Register</a>
+          No Account? <a href="/user/student/register">Register</a>
         </p>
       </div>
     </div>
