--- a/views/studentregister.ejs
+++ b/views/studentregister.ejs
@@ -6,7 +6,7 @@
           <i class="fas fa-user-plus"></i> Student Registration
         </h1>
         <%- include('partials/messages'); %>
-        <form action="/users/student/register" method="POST">
+        <form action="/user/student/register" method="POST">
           <div class="form-group">
             <label for="name">Name</label>
             <input
@@ -75,7 +75,7 @@
             Register
           </button>
         </form>
-        <p class="lead mt-4">Have An Account? <a href="/users/student/login">Login</a></p>
+        <p class="lead mt-4">Have An Account? <a href="/user/student/login">Login</a></p>
       </div>
     </div>
   </div>
