--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,11 +4,11 @@
       <div class="card card-body text-center">
         
         <p>Create an account or login</p>
-        <a href="/users/student/register" class="btn btn-primary btn-block mb-2"
+        <a href="/user/student/register" class="btn btn-primary btn-block mb-2"
           >Register [For Students]</a
         >
-        <a href="/users/student/login" class="btn btn-secondary btn-block">Students Login</a>
-        <a href="/users/manager/login" class="btn btn-secondary btn-block">Managers Login</a>
+        <a href="/user/student/login" class="btn btn-secondary btn-block">Students Login</a>
+        <a href="/user/manager/login" class="btn btn-secondary btn-block">Managers Login</a>
       </div>
     </div>
   </div>
