--- a/views/steeeudentdashboard.ejs
+++ b/views/steeeudentdashboard.ejs
@@ -20,13 +20,13 @@
   <div class="container">
     <div class="row">
       <div class="col-md-4">
-        <a href="/books/all/all/1" class="btn btn-primary btn-block">
+        <a href="/book/all/all/1" class="btn btn-primary btn-block">
           <i class="fa fa-plus"></i> Issue Book
         </a>
       </div>
 
       <div class="col-md-4">
-        <a href="/books/return-renew" class="btn btn-info btn-block">
+        <a href="/book/return-renew" class="btn btn-info btn-block">
           <i class="fa fa-retweet"></i> Renew/Return Book
         </a>
       </div>
